--- a/thesis/tex/used-software.tex
+++ b/thesis/tex/used-software.tex
@@ -169,8 +169,8 @@ Przykładem poprawnej listy wymagań jest napis \texttt{(:requirements :strips :
 Podczas analizy składniowej, zostanie on zamieniony na strumień symboli leksykalnych.
 Poniżej zamieszczono strumień symboli wraz z odpowiadającymi im leksemami umieszczonymi 
 w nawiasach prostokątnych.\\
-\textbf{(}[(] , \textbf{requirements}[:requirements] , \textbf{requirementName}[:strips] , \\
-\textbf{requirementName}[:fluents] , \textbf{)}[)]
+\textbf{(} [(] , \textbf{requirements} [:requirements] , \textbf{requirementName} [:strips] ,
+\textbf{requirementName} [:fluents] , \textbf{)} [)]
 
 Drzewo wyprowadzania tworzone podczas analizy składniowej jest przedstawione 
 na rysunku \ref{antlr_example}. Leksemy przyporządkowane symbolom leksykalnym
