thesis: specification, used-software: minor remarks

--- a/thesis/tex/specification.tex
+++ b/thesis/tex/specification.tex
@@ -3,8 +3,9 @@
 \section{Wstęp}
 Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do programowania w języku PDDL. Dodatkowym ważnym wymaganiem było wsparcie zewnętrznego planera FastDownward oraz możliwe dalsze rozwijanie aplikacji w kiedunku innych planerów. Aplikacja powinna pomagać użytkownikowi w utworzeniu plików PDDL, a później w zarządzaniu kodem. Kluczowym elementem zarządzania kodem jest wykrywanie błędów oraz wyświetlenie kodu w czytelnej formie. Aplikacja ma za zadanie pokolorować kod, oddzielić kluczowe fragmenty i podpowiadać słowa kluczowe, wzorem z popularnych środowisk pracy typu edytory języków Java lub Pascal. Ponadto sama aplikacja miała być łatwo dostępna i łatwa w instalacji, jak również w użytkowaniu.
 \section{Wymagania funkcjonalne}
+\JP{A nie możnaby kolorowania i wykrywania błędów połączyć w jedno? Coś pokroju: Wspomaganie użytkownika w pracy z edytorem?}
 \subsection{Kolorowanie składni}
-\begin{tabular}{|p{8cm}|}
+\begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Kolorowanie składni\\
 \hline
@@ -34,7 +35,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 
 \subsection{Wykrywanie błędów}
 \label{reqErrorDetection}
-\begin{tabular}{|p{8cm}|}
+\begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Wykrywanie błędów\\
 \hline
@@ -65,7 +66,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 
 \subsection{Podpowiadanie składni}
 \label{reqAutocompletion}
-\begin{tabular}{|p{8cm}|}
+\begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Podpowiadanie składni\\
 \hline
@@ -97,7 +98,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 
 \subsection{Tworzenie nowego pliku PDDL}
 \label{reqAutocompletion}
-\begin{tabular}{|p{8cm}|}
+\begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Tworzenie nowego pliku PDDL\\
 \hline
@@ -127,7 +128,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 
 \subsection{Repozytorium kodu}
 \label{reqAutocompletion}
-\begin{tabular}{|p{8cm}|}
+\begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Repozytorium kodu\\
 \hline
